--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,14 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.17.3",
+def aspectjVersion = "1.9.6",
+    allureVersion = "2.17.3",
     selenideVersion = "6.5.0",
-    junitVersion = "5.8.2"
+    junitVersion = "5.8.2",
+    ownerVersion = "1.0.12",
+    assertjVersion = "3.19.0",
+    slf4jVersion = "1.7.29"
+
 
 allure {
     report {
@@ -27,12 +32,12 @@ allure {
 
 dependencies {
     testImplementation(
-            "org.aspectj:aspectjweaver:1.9.6",
+            "org.aspectj:aspectjweaver:$aspectjVersion",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.aeonbits.owner:owner:1.0.12",
-            "org.assertj:assertj-core:3.19.0",
-            "org.slf4j:slf4j-simple:1.7.29",
+            "org.aeonbits.owner:owner:$ownerVersion",
+            "org.assertj:assertj-core:$assertjVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion")
 }
 
