--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     if (System.getProperty("threads") != null) {
